# k8s-cli

./: README.md  pyproject.toml
src/k8s/: config.py  context.py  main.py
src/k8s/ray/: configure_node.py  ray_head.py
