[project]
name = "k8s"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kubernetes>=33.1.0",
    "pydantic>=2.11.9",
    "tomli>=2.2.1",
    "typer>=0.17.4",
    "utility",
]


[dependency-groups]
ray = ["ray[default]"]

[tool.uv.sources]
"utility" = { workspace = true }

[project.scripts]
k8s = "k8s.main:k8s_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
